# GaussNewtonRotationOptimization

./: CMakeLists.txt  README.md
data/: points.txt
include/: GaussNewton.h  Undistortion.h
src/: GaussNewton.cc  Undistortion.cc  main.cc
